# wafer-run

./: .gitignore  CLAUDE.md  Cargo.toml  package-lock.json  package.json
crates/wafer-block/: Cargo.toml
crates/wafer-block-auth-validator/: Cargo.toml
crates/wafer-block-auth-validator/src/: lib.rs
crates/wafer-block-config/: Cargo.toml
crates/wafer-block-config/src/: block.rs  lib.rs  service.rs
crates/wafer-block-cors/: Cargo.toml
crates/wafer-block-cors/src/: lib.rs
crates/wafer-block-crypto/: Cargo.toml
crates/wafer-block-crypto/src/: block.rs  lib.rs  service.rs
crates/wafer-block-http-listener/: Cargo.toml
crates/wafer-block-http-listener/src/: lib.rs
crates/wafer-block-iam-guard/: Cargo.toml
crates/wafer-block-iam-guard/src/: lib.rs
crates/wafer-block-inspector/: Cargo.toml
crates/wafer-block-inspector/src/: inspector.html  lib.rs
crates/wafer-block-local-storage/: Cargo.toml
crates/wafer-block-local-storage/src/: lib.rs  service.rs
crates/wafer-block-logger/: Cargo.toml
crates/wafer-block-logger/src/: block.rs  lib.rs  service.rs
crates/wafer-block-monitoring/: Cargo.toml
crates/wafer-block-monitoring/src/: lib.rs
crates/wafer-block-network/: Cargo.toml
crates/wafer-block-network/src/: block.rs  lib.rs  service.rs
crates/wafer-block-postgres/: Cargo.toml
crates/wafer-block-postgres/src/: lib.rs  service.rs
crates/wafer-block-router/: Cargo.toml
crates/wafer-block-router/src/: lib.rs
crates/wafer-block-s3/: Cargo.toml
crates/wafer-block-s3/src/: lib.rs  service.rs
crates/wafer-block-sqlite/: Cargo.toml
crates/wafer-block-sqlite/src/: lib.rs  service.rs
crates/wafer-block-web/: Cargo.toml
crates/wafer-block-web/src/: lib.rs
crates/wafer-block/src/: error_codes.rs  helpers.rs  lib.rs  meta.rs  types.rs
crates/wafer-core/: Cargo.toml  wafer.json
crates/wafer-core/src/: lib.rs  mime.rs
crates/wafer-core/src/blocks/: auth.rs  http_server.rs  iam.rs  mod.rs  security_headers.rs
crates/wafer-core/src/blocks/auth/: mod.rs
crates/wafer-core/src/blocks/config/: block.rs  factory.rs  mod.rs  toml.rs
crates/wafer-core/src/blocks/cors/: mod.rs
crates/wafer-core/src/blocks/crypto/: block.rs  factory.rs  mod.rs  service.rs
crates/wafer-core/src/blocks/database/: block.rs  factory.rs  mod.rs  postgres.rs  postgres_factory.rs  service.rs  sqlite.rs  sqlite_factory.rs
crates/wafer-core/src/blocks/http/: mod.rs
crates/wafer-core/src/blocks/http_listener/: mod.rs
crates/wafer-core/src/blocks/http_router/: mod.rs
crates/wafer-core/src/blocks/iam/: mod.rs
crates/wafer-core/src/blocks/iam_guard/: mod.rs
crates/wafer-core/src/blocks/inspector/: inspector.html  mod.rs
crates/wafer-core/src/blocks/ip_rate_limit/: mod.rs
crates/wafer-core/src/blocks/local_storage/: mod.rs  service.rs
crates/wafer-core/src/blocks/logger/: block.rs  (+2 more)
crates/wafer-core/src/bridge/: http.rs  mod.rs
crates/wafer-core/src/chains/: mod.rs
crates/wafer-core/src/clients/: config.rs  crypto.rs  database.rs  logger.rs  mod.rs  network.rs  storage.rs
crates/wafer-core/src/flows/: http_server.rs  mod.rs
crates/wafer-core/src/interfaces/: mod.rs
crates/wafer-ffi/: Cargo.toml  wafer.h
crates/wafer-ffi/src/: lib.rs
crates/wafer-flow-http-server/: Cargo.toml
crates/wafer-flow-http-server/src/: lib.rs
crates/wafer-local/: Cargo.toml
crates/wafer-local/src/: main.rs
crates/wafer-run/: .gitignore  Cargo.toml  README.md
crates/wafer-run-node/: Cargo.toml  index.d.ts  package.json
crates/wafer-run-node/src/: lib.rs
crates/wafer-run/site/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
crates/wafer-run/spec/: WAFER_GO.md  WAFER_SPEC.md
crates/wafer-run/src/: block.rs  compat.rs  config.rs  context.rs  executor.rs  helpers.rs  lib.rs  meta.rs  observability.rs  registry.rs  router.rs  runtime.rs  security.rs  types.rs
crates/wafer-run/src/blocks/: config_block.rs  crypto_block.rs  database_block.rs  logger_block.rs  mod.rs  network_block.rs  storage_block.rs
crates/wafer-run/src/bridge/: http.rs  mod.rs
crates/wafer-run/src/common/: error_codes.rs  mod.rs  service_names.rs
crates/wafer-run/src/manifest/: mod.rs  to_schema.rs  types.rs
crates/wafer-run/src/migrate/: mod.rs
crates/wafer-run/src/schema/: adapter.rs  mod.rs  postgres.rs  sqlite.rs  types.rs
crates/wafer-run/src/services/: config.rs  config_toml.rs  crypto.rs  database.rs  database_postgres.rs  database_sqlite.rs  logger.rs  mod.rs  network.rs  storage.rs  storage_local.rs  storage_s3.rs
crates/wafer-run/src/waferconfig/: blocks.rs  bootstrap.rs  config.rs  mod.rs  providers.rs
crates/wafer-run/src/wasm/: bindings.rs  capabilities.rs  host.rs  loader.rs  mod.rs
crates/wafer-run/tests/: integration_test.rs
crates/wafer-sdk-rs/: Cargo.toml
crates/wafer-sdk-rs/src/: helpers.rs  lib.rs  types.rs
crates/wafer-sdk-rs/src/services/: config.rs  crypto.rs  database.rs  logger.rs  mod.rs  network.rs  storage.rs
crates/wafer-site/: Cargo.toml  build.rs  package-lock.json  package.json  playwright.config.ts
crates/wafer-site/content/: docs.html  index.html  playground.html  registry.html  theme.css
crates/wafer-site/content/_partials/: doc_foot.html  doc_head.html  lang_tabs.css  lang_tabs_mobile.css  svg_icons.html  switch_tab_script.html
crates/wafer-site/content/docs/: api-reference.html  api-runtime.html  api-sdk.html  api-services.html  api-types.html  built-in-blocks.html  chain-configuration.html  cli.html  core-concepts.html  creating-a-block.html  deployment.html  flow-configuration.html  http-bridge.html  registry.html  running-a-block.html  services.html  wasm-blocks.html
crates/wafer-site/data/: wafer-site.db
crates/wafer-site/src/: main.rs  playground.rs  registry.rs  services.rs
crates/wafer-site/tests/e2e/: docs.spec.ts  inspector.spec.ts  playground.spec.ts  registry.spec.ts
examples/api-server/: Cargo.toml
examples/api-server/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/static-site/: Cargo.toml
examples/static-site/src/: main.rs
(+82 files in other folders)
