[workspace]
resolver = "2"
members = [
    "crates/wafer-run",
    "crates/wafer-core",
    "crates/wafer-ffi",
    "crates/wafer-run-node",
    "crates/wafer-sdk-rs",
    "crates/wafer-site",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Internal crates
wafer-run = { path = "crates/wafer-run", features = ["full"] }
wafer-core = { path = "crates/wafer-core" }

# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
parking_lot = "0.12"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
bytes = "1"

# HTTP
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
hyper = "1"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# WASM
wasmtime = { version = "29", features = ["component-model"] }
wit-bindgen = "0.41"

# Crypto
argon2 = "0.5"
jsonwebtoken = "9"

# Storage
aws-sdk-s3 = "1"
aws-config = "1"

# Network
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Config
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono", "uuid"] }

# Node.js bindings
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"

# Dev
tempfile = "3"
