[package]
name = "wafer-block-iam-guard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Role-based access control middleware block for WAFER"

[dependencies]
wafer-run = { workspace = true }
wafer-core = { path = "../wafer-core", default-features = false }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[lib]
name = "wafer_block_iam_guard"
path = "src/lib.rs"
