[package]
name = "wafer-block-inspector"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WAFER block: runtime introspection — blocks, flows, and visual UI"

[dependencies]
wafer-run = { path = "../wafer-run" }
async-trait = { workspace = true }
serde_json = { workspace = true }
