[package]
name = "wafer-block-local-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local filesystem storage block for WAFER"

[dependencies]
wafer-run = { workspace = true }
wafer-core = { path = "../wafer-core", default-features = false }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[lib]
name = "wafer_block_local_storage"
path = "src/lib.rs"
