[package]
name = "wafer-block-network"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WAFER block: outbound network requests via NetworkService"

[dependencies]
wafer-run = { path = "../wafer-run" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
