[package]
name = "wafer-block-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PostgreSQL database block for WAFER"

[dependencies]
wafer-run = { workspace = true }
wafer-core = { path = "../wafer-core", default-features = false }
sqlx = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

[lib]
name = "wafer_block_postgres"
path = "src/lib.rs"
