[package]
name = "wafer-block-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WAFER block: static file server with caching and SPA support"

[dependencies]
wafer-run = { path = "../wafer-run" }
async-trait = { workspace = true }
tracing = { workspace = true }
