[package]
name = "wafer-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared reusable WAFER blocks and flow templates"

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
postgres = ["dep:sqlx"]
crypto = ["dep:argon2", "dep:jsonwebtoken"]
storage-local = []
storage-s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
network = ["dep:reqwest"]
config-toml = ["dep:toml"]
http = ["dep:axum", "dep:tower", "dep:tower-http", "dep:hyper"]
full = ["sqlite", "postgres", "crypto", "storage-local", "storage-s3", "network", "config-toml"]

[dependencies]
wafer-run = { path = "../wafer-run" }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }

# Database (optional)
rusqlite = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }

# Crypto (optional)
argon2 = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }

# Storage (optional)
aws-sdk-s3 = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }

# Network (optional)
reqwest = { workspace = true, optional = true }

# Config (optional)
toml = { workspace = true, optional = true }

# HTTP bridge (optional)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }

[lib]
name = "wafer_core"
path = "src/lib.rs"
