[package]
name = "wafer-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared interfaces, clients, and utilities for WAFER blocks"

[dependencies]
wafer-run = { path = "../wafer-run" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }

[lib]
name = "wafer_core"
path = "src/lib.rs"
