[package]
name = "wafer-flow-http-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WAFER flow: batteries-included HTTP server with security headers, CORS, rate limiting, monitoring, and routing"

[dependencies]
wafer-run = { path = "../wafer-run" }
wafer-block-cors = { path = "../wafer-block-cors" }
wafer-block-router = { path = "../wafer-block-router" }
wafer-block-security-headers = { path = "../wafer-block-security-headers" }
wafer-block-readonly-guard = { path = "../wafer-block-readonly-guard" }
wafer-block-ip-rate-limit = { path = "../wafer-block-ip-rate-limit" }
wafer-block-monitoring = { path = "../wafer-block-monitoring" }
wafer-block-http-listener = { path = "../wafer-block-http-listener" }
serde_json = { workspace = true }
