[package]
name = "wafer-local"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local development runner for Solobase — same runtime as production"

[[bin]]
name = "solobase-dev"
path = "src/main.rs"

[features]
default = ["wasm"]
wasm = ["wafer-run/wasm"]

[dependencies]
wafer-run = { path = "../wafer-run", features = ["full"] }
wafer-core = { path = "../wafer-core", features = ["full"] }
solobase = { path = "../../../solobase/crates/solobase" }
solobase-core = { path = "../../../solobase/crates/solobase-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
