[package]
name = "wafer-run"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WAFER runtime — WebAssembly Architecture for Flow Execution & Routing"
repository = "https://github.com/wafer-run/wafer-run"

[features]
default = ["http", "wasm"]
http = ["dep:axum", "dep:tower", "dep:tower-http", "dep:hyper"]
wasm = ["dep:wasmtime", "dep:reqwest"]
full = ["http", "wasm"]

[dependencies]
# Core
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }

# HTTP bridge (axum)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }

# WASM (Wasmtime)
wasmtime = { workspace = true, optional = true }

# Network (reqwest for WASM remote block downloads)
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
