[package]
name = "wafer-run"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WAFER runtime — WebAssembly Architecture for Flow Execution & Routing"
repository = "https://github.com/wafer-run/wafer-run"

[features]
default = ["wasm"]
wasm = ["dep:wasmtime", "dep:reqwest"]
full = ["wasm"]

[dependencies]
# Core
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }
url = "2"

# WASM (Wasmtime)
wasmtime = { workspace = true, optional = true }

# Network (reqwest for WASM remote block downloads)
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
