[package]
name = "wafer-run"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WAFER runtime — WebAssembly Architecture for Flow Execution & Routing"
repository = "https://github.com/wafer-run/wafer-run"

[features]
default = ["wasm"]
wasm = ["dep:wasmi", "dep:reqwest"]
full = ["wasm", "dep:tokio", "dep:tracing-subscriber"]

[dependencies]
# Core
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, optional = true }
bytes = { workspace = true }
sha2 = { workspace = true }
url = "2"

# WASM (wasmi interpreter)
wasmi = { workspace = true, optional = true }

# Network (reqwest for WASM remote block downloads)
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
