[package]
name = "wafer-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WAFER SDK for writing blocks compiled to WebAssembly components"
repository = "https://github.com/wafer-run/wafer-run"
keywords = ["wafer", "wasm", "guest", "blocks", "pipeline"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[profile.release]
opt-level = "s"
lto = true
strip = true
