[package]
name = "wafer-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WAFER SDK for writing blocks compiled to WebAssembly (thin ABI)"
repository = "https://github.com/wafer-run/wafer-run"
keywords = ["wafer", "wasm", "guest", "blocks", "pipeline"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wafer-block = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
