[package]
name = "wafer-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WAFER SDK for writing blocks compiled to WebAssembly (Component Model)"
repository = "https://github.com/wafer-run/wafer-run"
keywords = ["wafer", "wasm", "guest", "blocks", "pipeline"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wafer-block = { workspace = true }
