[package]
name = "wafer-site"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WAFER website, documentation, playground, and block registry"

[dependencies]
wafer-run = { path = "../wafer-run" }
wafer-core = { path = "../wafer-core", features = ["full", "http"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
