[package]
name = "hello-world"
version = "0.0.1"
edition = "2021"

[dependencies]
# For examples within the monorepo, use path deps.
# In your own project, use crates.io deps:
#   wafer-run = { version = "0.1", features = ["full"] }
#   wafer-flow-http-server = "0.1"
wafer-run  = { path = "../../crates/wafer-run", features = ["full"] }
wafer-flow-http-server = { path = "../../crates/wafer-flow-http-server" }

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
